[package]
name = "t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
lazy_static = "1.4.0"
async-std = "1.12.0"
chrono = "0.4.23"
parking_lot = {version = "0.12.1", features = ["serde"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
validator = "0.16.0"
regex = "1.7.1"
actix-cors = "0.6.4"
